--- a/velotrenajeri/SundaysFitnessK8718P.html
+++ b/velotrenajeri/SundaysFitnessK8718P.html
@@ -57,8 +57,8 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Велотренажер Konlega K8738" src="../images/products/Sundays-Fitness-K8718P-1.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Велотренажер Konlega K8738" src="../images/products/Sundays-Fitness-K8718P-2.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Велотренажер Sunday Fitness" src="../images/products/Sundays-Fitness-K8718P-2.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Велотренажер Sunday Fitness" src="../images/products/Sundays-Fitness-K8718P-1.jpg" tabindex="0"></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
