--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -42,6 +42,16 @@
 <div class="Line"> <h1>Эллиптические тренажеры (элипсоиды)</h1> </div>
 <div class="content">
 <h2><a href="Products.html" id="Back">⬅Каталог</a></h2>
+
+<div class="block">
+<a href="elipsoidi/Marcy-NS40501E.html">
+  <img id="pictureInBlock" alt="Эллиптический тренажер Marcy NS40501E" src="images/products/marcy-ns40501e-04.jpg">
+  <p>Marcy NS40501E</p>
+  <p>Цена за месяц: 45 руб.</p>
+  <p>Цена за 2 месяца: 80 руб.</p>
+  <p>Цена за 3 месяца: 135 руб. +бесплатная доставка</p></a>
+</div>
+
 <div class="block">
 <a href="elipsoidi/KonlegaK8709.html">
   <img id="pictureInBlock" alt="Эллиптический тренажер Konlega K8709" src="images/products/KonlegaK8709.jpg">
@@ -61,6 +71,15 @@
 </div>
 
 <div class="block">
+<a href="elipsoidi/Sundays-Fitness-K8718HP.html">
+  <img id="pictureInBlock" alt="Эллиптический тренажер Sundays Fitness K8718HP" src="images/products/Sundays-Fitness-K8718HP-1.jpg">
+  <p>Sundays Fitness K8718HP</p>
+  <p>Цена за месяц: 65 руб.</p>
+  <p>Цена за 2 месяца: 120 руб.</p>
+  <p>Цена за 3 месяца: 195 руб. +бесплатная доставка</p></a>
+</div>
+
+<div class="block">
 <a href="elipsoidi/KonlegaK8731.html">
   <img id="pictureInBlock" alt="Эллиптический тренажер Konlega K8731" src="images/products/KonlegaK8731.jpg">
   <p>Konlega K8731</p>
@@ -68,6 +87,16 @@
   <p>Цена за 2 месяца: 130 руб.</p>
   <p>Цена за 3 месяца: 210 руб. +бесплатная доставка</p></a>
 </div>
+
+<div class="block">
+<a href="elipsoidi/Sportop-E2000i.html">
+  <img id="pictureInBlock" alt="Эллиптический тренажер Sportop E2000i" src="images/products/sportop-e2000i-1.jpg">
+  <p>Sportop E2000i</p>
+  <p>Цена за месяц: 85 руб.</p>
+  <p>Цена за 2 месяца: 160 руб.</p>
+  <p>Цена за 3 месяца: 255 руб. +бесплатная доставка</p></a>
+</div>
+
 
 </div>
 
