--- a/elipsoidi/Sportop-E2000i.html
+++ b/elipsoidi/Sportop-E2000i.html
@@ -44,12 +44,12 @@
  
  
   
-<div class="Line"> <h1>Эллиптический тренажер Konlega K8709</h1> </div>
+<div class="Line"> <h1>Эллиптический тренажер Sportop E2000i</h1> </div>
 <div class="content">
 
 <h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
 
-<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg">
+<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Эллиптический тренажер Sportop E2000i" src="../images/products/sportop-e2000i-1.jpg">
 
 <!-- Карусель -->
 <script src="../Carousel2.js"></script>
@@ -57,11 +57,12 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-2.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-3.jpg"" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-4.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-5.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sportop E2000i" src="../images/products/sportop-e2000i-1.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sportop E2000i" src="../images/products/sportop-e2000i-2.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sportop E2000i" src="../images/products/sportop-e2000i-3.jpg"" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sportop E2000i" src="../images/products/sportop-e2000i-4.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sportop E2000i" src="../images/products/sportop-e2000i-5.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sportop E2000i" src="../images/products/sportop-e2000i-6.jpg" tabindex="0"></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
@@ -78,15 +79,15 @@
 </tr>
 <tr>
 <td>1 месяц</td>
-<td>55 руб.</td>
+<td>85 руб.</td>
 </tr>
 <tr>
 <td>2 месяца</td>
-<td>100 руб.</td>
+<td>160 руб.</td>
 </tr>
 <tr>
 <td>3 месяца</td>
-<td>165 руб. + бесплатная доставка</td>
+<td>255 руб. + бесплатная доставка</td>
 </tr>
 <tr>
 </table>
@@ -97,19 +98,9 @@
 <h2 style="text-align: center;"><u>Описание</u></h2>
 <div style="width: 75%; margin: auto;">
 <p id="Description">
-<b><u>Эллиптический тренажер бренда Konlega</u></b> от ведущей компании KPOWER SPORTS с магнитной системой сопротивления и механической регулировкой нагрузки (8 уровней).<br>
-В основе системы нагружения - <b><u>магнитный привод с увеличенным количеством магнитов</u></b>, что обеспечивает плавность хода, бесшумную работу, долговечность и надежность.<br>
-Отличный вариант для проведения кардиотренировки! Занимаясь на эллиптическом тренажере, вы даете нагрузку на все группы мышц, развиваете дыхание, при этом снимаете нагрузку с суставов.<br>
-В данной модели <b><u>удобное расположение рукояток на поручнях</u></b>, что позволяет комфортно чувствовать себя во время тренировки и снимает нагрузку с мышц спины.<br>
-Широкие педали обеспечивают комфортные условия тренировки.<br>
-&#149;<b><u>Показатели дисплея:</u></b><br>
-&#149;<b>затраченное время</b><br>
-&#149;<b>скорость</b><br>
-&#149;<b>расстояние</b><br>
-&#149;<b>сжигаемые калории</b><br>
-&#149;<b>одометр (показывает общее расстояние, "пройденное" тренажером)</b><br>
-&#149;<b>показания пульса</b><br>
-Полка для планшета/телефона позволяет прослушивать во время тренировки любимую музыку либо смотреть фильмы/сериалы.
+Sportop E2000i — это бюджетная, но действенная модель электромагнитного эллиптического тренажера. Отлично подходит для качественных и безопасных кардиотренировок в домашних условиях. Позволяет проработать мышцы ног, ягодиц, плечевого пояса, а также улучшить координацию и общий тонус тела.
+<br>
+Подключается при помощи сетевого адаптера. Питание от сети позволит установить нагрузку и работать с программами. Совместим с программным обеспечением iOs и Android. Для расширения возможностей тренировок скачайте программу iConcole+
 </p>
 </div>
 
@@ -118,15 +109,15 @@
 <tr>
 <th colspan="2">Характеристики</th>
 </tr>
-<tr><td>Тип</td><td>магнитный</td></tr>
-<tr><td>Ширина</td><td>62 см</td></tr>
-<tr><td>Высота</td><td>160 см</td></tr>
-<tr><td>Длина</td><td>121 см</td></tr>
-<tr><td>Длина шага макс</td><td>33 см</td></tr>
-<tr><td>Кол-во уровней нагрузки</td><td>8</td></tr>
-<tr><td>Маховик</td><td>9 кг</td></tr>
-<tr><td>Максимальная масса пользователя</td><td>120 кг</td></tr>
-<tr><td>Масса</td><td>43.4 кг</td></tr>
+<tr><td>Тип</td><td>электромагнитный</td></tr>
+<tr><td>Ширина</td><td>66 см</td></tr>
+<tr><td>Высота</td><td>156 см</td></tr>
+<tr><td>Длина</td><td>148.5 см</td></tr>
+<tr><td>Длина шага макс</td><td>38 см</td></tr>
+<tr><td>Кол-во уровней нагрузки</td><td>16</td></tr>
+<tr><td>Маховик</td><td>10 кг</td></tr>
+<tr><td>Максимальная масса пользователя</td><td>125 кг</td></tr>
+<tr><td>Масса</td><td>56 кг</td></tr>
 </table>
 
 
