--- a/elipsoidi/Sundays-Fitness-K8718HP.html
+++ b/elipsoidi/Sundays-Fitness-K8718HP.html
@@ -44,12 +44,12 @@
  
  
   
-<div class="Line"> <h1>Эллиптический тренажер Konlega K8709</h1> </div>
+<div class="Line"> <h1>Эллиптический тренажер Sundays Fitness K8718HP</h1> </div>
 <div class="content">
 
 <h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
 
-<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg">
+<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Эллиптический тренажер Sundays-Fitness-K8718HP" src="../images/products/Sundays-Fitness-K8718HP-1.jpg">
 
 <!-- Карусель -->
 <script src="../Carousel2.js"></script>
@@ -57,11 +57,10 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-2.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-3.jpg"" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-4.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-5.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sundays Fitness K8718HP" src="../images/products/Sundays-Fitness-K8718HP-1.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sundays Fitness K8718HP" src="../images/products/Sundays-Fitness-K8718HP-2.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sundays Fitness K8718HP" src="../images/products/Sundays-Fitness-K8718HP-3.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Sundays Fitness K8718HP" src="../images/products/Sundays-Fitness-K8718HP-4.jpg" tabindex="0"></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
@@ -78,15 +77,15 @@
 </tr>
 <tr>
 <td>1 месяц</td>
-<td>55 руб.</td>
+<td>65 руб.</td>
 </tr>
 <tr>
 <td>2 месяца</td>
-<td>100 руб.</td>
+<td>120 руб.</td>
 </tr>
 <tr>
 <td>3 месяца</td>
-<td>165 руб. + бесплатная доставка</td>
+<td>185 руб. + бесплатная доставка</td>
 </tr>
 <tr>
 </table>
@@ -97,20 +96,7 @@
 <h2 style="text-align: center;"><u>Описание</u></h2>
 <div style="width: 75%; margin: auto;">
 <p id="Description">
-<b><u>Эллиптический тренажер бренда Konlega</u></b> от ведущей компании KPOWER SPORTS с магнитной системой сопротивления и механической регулировкой нагрузки (8 уровней).<br>
-В основе системы нагружения - <b><u>магнитный привод с увеличенным количеством магнитов</u></b>, что обеспечивает плавность хода, бесшумную работу, долговечность и надежность.<br>
-Отличный вариант для проведения кардиотренировки! Занимаясь на эллиптическом тренажере, вы даете нагрузку на все группы мышц, развиваете дыхание, при этом снимаете нагрузку с суставов.<br>
-В данной модели <b><u>удобное расположение рукояток на поручнях</u></b>, что позволяет комфортно чувствовать себя во время тренировки и снимает нагрузку с мышц спины.<br>
-Широкие педали обеспечивают комфортные условия тренировки.<br>
-&#149;<b><u>Показатели дисплея:</u></b><br>
-&#149;<b>затраченное время</b><br>
-&#149;<b>скорость</b><br>
-&#149;<b>расстояние</b><br>
-&#149;<b>сжигаемые калории</b><br>
-&#149;<b>одометр (показывает общее расстояние, "пройденное" тренажером)</b><br>
-&#149;<b>показания пульса</b><br>
-Полка для планшета/телефона позволяет прослушивать во время тренировки любимую музыку либо смотреть фильмы/сериалы.
-</p>
+Электромагнитный эллиптический тренажер Sundays K8718HP отлично подойдет для тренировок в домашних условиях. Этот тренажер имеет ряд преимуществ: современный эргономичный дизайн, большое число программ и уровней нагрузки, простое управлением и контроль за процессом тренировки. Эллипсоид позволяет создавать программы самостоятельно. Тренировки на эллиптическом тренажере позволяют проработать эффективно как основные группы мышц ног, так и мышцы рук.
 </div>
 
 <table style="margin: auto;" class="table1">
@@ -118,15 +104,15 @@
 <tr>
 <th colspan="2">Характеристики</th>
 </tr>
-<tr><td>Тип</td><td>магнитный</td></tr>
-<tr><td>Ширина</td><td>62 см</td></tr>
-<tr><td>Высота</td><td>160 см</td></tr>
-<tr><td>Длина</td><td>121 см</td></tr>
-<tr><td>Длина шага макс</td><td>33 см</td></tr>
-<tr><td>Кол-во уровней нагрузки</td><td>8</td></tr>
-<tr><td>Маховик</td><td>9 кг</td></tr>
+<tr><td>Тип</td><td>электромагнитный</td></tr>
+<tr><td>Ширина</td><td>57 см</td></tr>
+<tr><td>Высота</td><td>172 см</td></tr>
+<tr><td>Длина</td><td>145 см</td></tr>
+<tr><td>Длина шага макс</td><td>36-40 см</td></tr>
+<tr><td>Программы</td><td>21</td></tr>
+<tr><td>Маховик</td><td>7 кг</td></tr>
 <tr><td>Максимальная масса пользователя</td><td>120 кг</td></tr>
-<tr><td>Масса</td><td>43.4 кг</td></tr>
+<tr><td>Масса</td><td>50,4 кг</td></tr>
 </table>
 
 
