--- a/elipsoidi/Marcy-NS40501E.html
+++ b/elipsoidi/Marcy-NS40501E.html
@@ -44,12 +44,12 @@
  
  
   
-<div class="Line"> <h1>Эллиптический тренажер Konlega K8709</h1> </div>
+<div class="Line"> <h1>Эллиптический тренажер Marcy-NS40501E</h1> </div>
 <div class="content">
 
 <h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
 
-<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg">
+<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Эллиптический тренажер Marcy-NS40501E" src="../images/products/marcy-ns40501e-04.jpg">
 
 <!-- Карусель -->
 <script src="../Carousel2.js"></script>
@@ -57,11 +57,14 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-2.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-3.jpg"" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-4.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Konlega K8709" src="../images/products/KonlegaK8709-5.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Marcy-NS40501E" src="../images/products/marcy-ns40501e-01.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Marcy-NS40501E" src="../images/products/marcy-ns40501e-02.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Marcy-NS40501E" src="../images/products/marcy-ns40501e-03.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Marcy-NS40501E" src="../images/products/marcy-ns40501e-04.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Marcy-NS40501E" src="../images/products/marcy-ns40501e-05.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Marcy-NS40501E" src="../images/products/marcy-ns40501e-06.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Marcy-NS40501E" src="../images/products/marcy-ns40501e-07.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Эллиптический тренажер Marcy-NS40501E" src="../images/products/marcy-ns40501e-08.jpg" tabindex="0"></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
@@ -78,15 +81,15 @@
 </tr>
 <tr>
 <td>1 месяц</td>
-<td>55 руб.</td>
+<td>45 руб.</td>
 </tr>
 <tr>
 <td>2 месяца</td>
-<td>100 руб.</td>
+<td>80 руб.</td>
 </tr>
 <tr>
 <td>3 месяца</td>
-<td>165 руб. + бесплатная доставка</td>
+<td>135 руб. + бесплатная доставка</td>
 </tr>
 <tr>
 </table>
@@ -97,20 +100,8 @@
 <h2 style="text-align: center;"><u>Описание</u></h2>
 <div style="width: 75%; margin: auto;">
 <p id="Description">
-<b><u>Эллиптический тренажер бренда Konlega</u></b> от ведущей компании KPOWER SPORTS с магнитной системой сопротивления и механической регулировкой нагрузки (8 уровней).<br>
-В основе системы нагружения - <b><u>магнитный привод с увеличенным количеством магнитов</u></b>, что обеспечивает плавность хода, бесшумную работу, долговечность и надежность.<br>
-Отличный вариант для проведения кардиотренировки! Занимаясь на эллиптическом тренажере, вы даете нагрузку на все группы мышц, развиваете дыхание, при этом снимаете нагрузку с суставов.<br>
-В данной модели <b><u>удобное расположение рукояток на поручнях</u></b>, что позволяет комфортно чувствовать себя во время тренировки и снимает нагрузку с мышц спины.<br>
-Широкие педали обеспечивают комфортные условия тренировки.<br>
-&#149;<b><u>Показатели дисплея:</u></b><br>
-&#149;<b>затраченное время</b><br>
-&#149;<b>скорость</b><br>
-&#149;<b>расстояние</b><br>
-&#149;<b>сжигаемые калории</b><br>
-&#149;<b>одометр (показывает общее расстояние, "пройденное" тренажером)</b><br>
-&#149;<b>показания пульса</b><br>
-Полка для планшета/телефона позволяет прослушивать во время тренировки любимую музыку либо смотреть фильмы/сериалы.
-</p>
+Эллиптический тренажер NS-40501E от Marcy позволяет получить полноценную кардионагрузку, не выходя из дома. Компактная конструкция кардиотренажера позволяет разместить его даже в самых ограниченных по площади помещениях. Кроме того, удобно расположенные транспортные колесики позволяют легко перемещать и хранить эллиптический тренажер. Благодаря эргономичным ручкам можно переключаться с тренировки ног на руки, увеличивая тем самым общее развитие тела.<br>
+Простая в использовании дисплейная панель компьютера с питанием от батареи показывает время, скорость, расстояние, сожженные калории, настройки одометра и сканирования, что позволяет следить за ходом тренировки, ее результатами.
 </div>
 
 <table style="margin: auto;" class="table1">
@@ -119,14 +110,14 @@
 <th colspan="2">Характеристики</th>
 </tr>
 <tr><td>Тип</td><td>магнитный</td></tr>
-<tr><td>Ширина</td><td>62 см</td></tr>
+<tr><td>Ширина</td><td>60 см</td></tr>
 <tr><td>Высота</td><td>160 см</td></tr>
-<tr><td>Длина</td><td>121 см</td></tr>
-<tr><td>Длина шага макс</td><td>33 см</td></tr>
+<tr><td>Длина</td><td>124 см</td></tr>
+<tr><td>Длина шага макс</td><td>34 см</td></tr>
 <tr><td>Кол-во уровней нагрузки</td><td>8</td></tr>
-<tr><td>Маховик</td><td>9 кг</td></tr>
-<tr><td>Максимальная масса пользователя</td><td>120 кг</td></tr>
-<tr><td>Масса</td><td>43.4 кг</td></tr>
+<tr><td>Маховик</td><td>8 кг</td></tr>
+<tr><td>Максимальная масса пользователя</td><td>100 кг</td></tr>
+<tr><td>Масса</td><td>34 кг</td></tr>
 </table>
 
 
