--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -89,6 +89,15 @@
 </div>
 
 <div class="block">
+<a href="elipsoidi/Sportop-E1000-Plus.html">
+  <img id="pictureInBlock" alt="Эллиптический тренажер Sportop E1000 Plus" src="images/products/Sportop-E1000-Plus-1.jpg">
+  <p>Sportop E1000 Plus</p>
+  <p>Цена за месяц: 80 руб.</p>
+  <p>Цена за 2 месяца: 150 руб.</p>
+  <p>Цена за 3 месяца: 240 руб. +бесплатная доставка</p></a>
+</div>
+
+<div class="block">
 <a href="elipsoidi/Sportop-E2000i.html">
   <img id="pictureInBlock" alt="Эллиптический тренажер Sportop E2000i" src="images/products/sportop-e2000i-1.jpg">
   <p>Sportop E2000i</p>
