--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -98,6 +98,15 @@
 </div>
 
 <div class="block">
+<a href="elipsoidi/Sportop-E2000.html">
+  <img id="pictureInBlock" alt="Эллиптический тренажер Sportop E2000" src="images/products/sportop-e2000-1.jpg">
+  <p>Sportop E2000</p>
+  <p>Цена за месяц: 85 руб.</p>
+  <p>Цена за 2 месяца: 160 руб.</p>
+  <p>Цена за 3 месяца: 255 руб. +бесплатная доставка</p></a>
+</div>
+
+<div class="block">
 <a href="elipsoidi/Sportop-E2000i.html">
   <img id="pictureInBlock" alt="Эллиптический тренажер Sportop E2000i" src="images/products/sportop-e2000i-1.jpg">
   <p>Sportop E2000i</p>
