--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <p id="ContentText3" style=" text-align: left; float: right;  "><u>Кому нужна аренда спортивных тренажеров</u>:<br>
  - Людям, которые не уверены в покупке тренажера, но хотят попробовать;<br> 
 - Людям, которые не хотят тратить много времени на спортзал;<br>
-- Людям, которые не хотят покупать дорогие абонименты в спортзал;<br>
+- Людям, которые не хотят покупать дорогие абонементы в спортзал;<br>
 - Людям, которые живут на съемной квартире и не хотят покупать спортивный тренажер;
  </p>
 </div>
