--- a/elipsoidi/Sportop-E1000-Plus.html
+++ b/elipsoidi/Sportop-E1000-Plus.html
@@ -96,7 +96,7 @@
 <h2 style="text-align: center;"><u>Описание</u></h2>
 <div style="width: 75%; margin: auto;">
 <p id="Description">
-Sportop E2000i — это бюджетная, но действенная модель электромагнитного эллиптического тренажера. Отлично подходит для качественных и безопасных кардиотренировок в домашних условиях. Позволяет проработать мышцы ног, ягодиц, плечевого пояса, а также улучшить координацию и общий тонус тела.
+Sportop E1000P — это бюджетная, но действенная модель электромагнитного эллиптического тренажера. Отлично подходит для качественных и безопасных кардиотренировок в домашних условиях. Позволяет проработать мышцы ног, ягодиц, плечевого пояса, а также улучшить координацию и общий тонус тела.
 <br>
 Подключается при помощи сетевого адаптера. Питание от сети позволит установить нагрузку и работать с программами. Следите за показаниями на цветном дисплее по: скорости, времени, дистанции, сожженным калориям, величине пульса.
 </p>
