--- a/velotrenajeri.html
+++ b/velotrenajeri.html
@@ -74,7 +74,16 @@
   <p>Sundays Fitness K8718P-7</p>
   <p>Цена за месяц: 50 руб.</p>
   <p>Цена за 2 месяца: 90 руб.</p>
-  <p>Цена за 3 месяца: 150 руб. +бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 145 руб. +бесплатная доставка</p></a>
+</div>
+
+<div class="block">
+<a href="velotrenajeri/SundaysFitnessK8731.html">
+  <img id="pictureInBlock" alt="Велотренажер Sundays Fitness K8731" src="images/products/Sundays-Fitness-K8731-1.jpg">
+  <p>Sundays Fitness K8731</p>
+  <p>Цена за месяц: 60 руб.</p>
+  <p>Цена за 2 месяца: 110 руб.</p>
+  <p>Цена за 3 месяца: 180 руб. +бесплатная доставка</p></a>
 </div>
 
 </div>
