--- a/velotrenajeri.html
+++ b/velotrenajeri.html
@@ -69,6 +69,15 @@
 </div>
 
 <div class="block">
+<a href="velotrenajeri/Sportop-B780P.html">
+  <img id="pictureInBlock" alt="Велотренажер/Велоэргометр Sportop B780P" src="images/products/Sportop-B780P-1.jpg">
+  <p>Sportop B780P</p>
+  <p>Цена за месяц: 50 руб.</p>
+  <p>Цена за 2 месяца: 90 руб.</p>
+  <p>Цена за 3 месяца: 150 руб. +бесплатная доставка</p></a>
+</div>
+
+<div class="block">
 <a href="velotrenajeri/SundaysFitnessK8718P.html">
   <img id="pictureInBlock" alt="Велотренажер Sundays Fitness K8718P" src="images/products/Sundays-Fitness-K8718P-1.jpg">
   <p>Sundays Fitness K8718P-7</p>
