--- a/velotrenajeri/SundaysFitnessK8718P.html
+++ b/velotrenajeri/SundaysFitnessK8718P.html
@@ -44,7 +44,7 @@
  
  
   
-<div class="Line"> <h1>Велотренажер/Велоэргометр Sundays Fitness K8718P-7</h1> </div>
+<div class="Line"> <h1>Велотренажер Sundays Fitness K8718P-7</h1> </div>
 <div class="content">
 
 <h2><a href="../velotrenajeri.html" id="Back">⬅Назад</a></h2>
