--- a/Contacts.html
+++ b/Contacts.html
@@ -45,8 +45,8 @@
 <div class="content">
 <center>
 <p style="text-align: center;"><u>Телефоны:</u><br>
-МТС <u><a style="color: black;" href="tel:+375291959090" >+375 (29) 195-90-90</a></u> <br>
-&#160;A1&#160;&#160; <u><a style="color: black;" href="tel:+375297800990">+375 (29) 780-09-90</a></u> <br>
+А1 <u><a style="color: black;" href="tel:+375291959090" >+375 (29) 195-90-90</a></u> <br>
+&#160;МТС&#160;&#160; <u><a style="color: black;" href="tel:+375297800990">+375 (29) 780-09-90</a></u> <br>
 e-mail: <u><a style="color: black;" href="mailto:info@sportzaldoma.by">info@sportzaldoma.by</a></u><br></p> 
 <p style="text-align: center;">Соцальные сети:</u></p> 
 <div class="socialnetwork">
