--- a/velotrenajeri.html
+++ b/velotrenajeri.html
@@ -41,13 +41,23 @@
 <div class="Line"> <h1>Велотренажеры</h1> </div>
 <div class="content">
 <h2><a href="Products.html" id="Back">⬅Каталог</a></h2>
+
 <div class="block">
 <a href="velotrenajeri/KonlegaK8516.html">
   <img id="pictureInBlock" alt="Велотренажер Konlega K8516" src="images/products/KonlegaK8516.jpg">
   <p>Konlega K8516</p>
   <p>Цена за месяц: 40 руб.</p>
   <p>Цена за 2 месяца: 70 руб.</p>
-  <p>Цена за 3 месяца: 120 руб.+бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 120 руб. +бесплатная доставка</p></a>
+</div>
+
+<div class="block">
+<a href="velotrenajeri/Sportop-B480.html">
+  <img id="pictureInBlock" alt="Велотренажер Sportop B480" src="images/products/Sportop-B480.jpg">
+  <p>Sportop B480</p>
+  <p>Цена за месяц: 40 руб.</p>
+  <p>Цена за 2 месяца: 70 руб.</p>
+  <p>Цена за 3 месяца: 120 руб. +бесплатная доставка</p></a>
 </div>
 
 <div class="block">
@@ -56,7 +66,7 @@
   <p>Konlega K8738</p>
   <p>Цена за месяц: 45 руб.</p>
   <p>Цена за 2 месяца: 80 руб.</p>
-  <p>Цена за 3 месяца: 135 руб.+бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 135 руб. +бесплатная доставка</p></a>
 </div>
 
 <div class="block">
@@ -65,7 +75,7 @@
   <p>Konlega K8601</p>
   <p>Цена за месяц: 45 руб.</p>
   <p>Цена за 2 месяца: 80 руб.</p>
-  <p>Цена за 3 месяца: 135 руб.+бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 135 руб. +бесплатная доставка</p></a>
 </div>
 
 <div class="block">
@@ -74,7 +84,7 @@
   <p>Sportop B780P</p>
   <p>Цена за месяц: 45 руб.</p>
   <p>Цена за 2 месяца: 80 руб.</p>
-  <p>Цена за 3 месяца: 135 руб.+бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 135 руб. +бесплатная доставка</p></a>
 </div>
 
 <div class="block">
@@ -83,7 +93,7 @@
   <p>Sundays Fitness K8718P-7</p>
   <p>Цена за месяц: 50 руб.</p>
   <p>Цена за 2 месяца: 90 руб.</p>
-  <p>Цена за 3 месяца: 150 руб.+бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 150 руб. +бесплатная доставка</p></a>
 </div>
 
 <div class="block">
@@ -92,7 +102,7 @@
   <p>Sundays Fitness K8731</p>
   <p>Цена за месяц: 60 руб.</p>
   <p>Цена за 2 месяца: 110 руб.</p>
-  <p>Цена за 3 месяца: 180 руб.+бесплатная доставка</p></a>
+  <p>Цена за 3 месяца: 180 руб. +бесплатная доставка</p></a>
 </div>
 
 </div>
