--- a/velotrenajeri/Sportop-B480.html
+++ b/velotrenajeri/Sportop-B480.html
@@ -103,7 +103,7 @@
 На цветном дисплее будет отображаться весь ход тренировок, время, пройденное расстояние, скорость, сколько сожжено калорий и мн. др.<br>
 Несмотря на компактные размеры, тренажер отличается высокой производительностью и качеством деталей.<br>
 За счет вертикальной регулировки высоты сиденья тренироваться на велотренажере могут пользователи разного роста.<br>
-В основе системы нагружения - магнитный привод с увеличенным количеством магнитов, что обеспечивает плавность хода, бесшумную работу, долговечность и надежность. Данная модель велотренажера не требует подключения к электросети и максимально проста в использовании.
+В основе системы нагружения - магнитный привод с увеличенным количеством магнитов, что обеспечивает плавность хода, бесшумную работу, долговечность и надежность. Данная модель велотренажера не требует подключения к электросети и максимально проста в использовании.<br>
 <b><u>Показатели дисплея:</u></b><br>
 &#149;<b>затраченное время</b><br>
 &#149;<b>скорость</b><br>
