--- a/velotrenajeri.html
+++ b/velotrenajeri.html
@@ -105,6 +105,15 @@
   <p>Цена за 3 месяца: 180 руб. +бесплатная доставка</p></a>
 </div>
 
+<div class="block">
+<a href="velotrenajeri/Sportop-B800P.html">
+  <img id="pictureInBlock" alt="Велотренажер Sportop B800 Plus" src="images/products/Sportop-B800P-1.jpg">
+  <p>Sportop B800 Plus</p>
+  <p>Цена за месяц: 60 руб.</p>
+  <p>Цена за 2 месяца: 110 руб.</p>
+  <p>Цена за 3 месяца: 180 руб. +бесплатная доставка</p></a>
+</div>
+
 </div>
 
   <!-- Подвал -->
