--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -53,6 +53,15 @@
 </div>
 
 <div class="block">
+<a href="elipsoidi/American-Fitness-SPR-XNA1244E.html">
+  <img id="pictureInBlock" alt="Эллиптический тренажер American Fitness SPR-XNA1244E" src="images/products/American-Fitness-SPR-XNA1244E-1.jpg">
+  <p>American Fitness SPR-XNA1244E</p>
+  <p>Цена за месяц: 50 руб.</p>
+  <p>Цена за 2 месяца: 90 руб.</p>
+  <p>Цена за 3 месяца: 150 руб. +бесплатная доставка</p></a>
+</div>
+
+<div class="block">
 <a href="elipsoidi/KonlegaK8709.html">
   <img id="pictureInBlock" alt="Эллиптический тренажер Konlega K8709" src="images/products/KonlegaK8709.jpg">
   <p>Konlega K8709</p>
