--- a/elipsoidi/American-Fitness-SPR-XNA1244E.html
+++ b/elipsoidi/American-Fitness-SPR-XNA1244E.html
@@ -44,7 +44,7 @@
  
  
   
-<div class="Line"> <h1>Эллиптический тренажер American Fitness SPR-XNA1244E</h1> </div>
+<div class="Line"> <h1>Эллиптический тренажер American Fitness</h1> </div>
 <div class="content">
 
 <h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
