--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -89,15 +89,6 @@
 </div>
 
 <div class="block">
-<a href="elipsoidi/KonlegaK8731.html">
-  <img id="pictureInBlock" alt="Эллиптический тренажер Konlega K8731" src="images/products/KonlegaK8731.jpg">
-  <p>Konlega K8731</p>
-  <p>Цена за месяц: 70 руб.</p>
-  <p>Цена за 2 месяца: 130 руб.</p>
-  <p>Цена за 3 месяца: 210 руб.+бесплатная доставка</p></a>
-</div>
-
-<div class="block">
 <a href="elipsoidi/Sportop-E1000-Plus.html">
   <img id="pictureInBlock" alt="Эллиптический тренажер Sportop E1000 Plus" src="images/products/Sportop-E1000-Plus-1.jpg">
   <p>Sportop E1000 Plus</p>
@@ -124,6 +115,14 @@
   <p>Цена за 3 месяца: 255 руб.+бесплатная доставка</p></a>
 </div>
 
+<div class="block">
+<a href="elipsoidi/Sportop-E7000P.html">
+  <img id="pictureInBlock" alt="Эллиптический тренажер Sportop E7000P" src="images/products/sportop-e7000p-1.jpg">
+  <p>Sportop E2000i</p>
+  <p>Цена за месяц: 90 руб.</p>
+  <p>Цена за 2 месяца: 170 руб.</p>
+  <p>Цена за 3 месяца: 270 руб.+бесплатная доставка</p></a>
+</div>
 
 </div>
 
