--- a/elipsoidi/Sportop-E7000P.html
+++ b/elipsoidi/Sportop-E7000P.html
@@ -100,7 +100,7 @@
 ЖК-дисплей с подсветкой;<br>
 работает от сети;<br>
 рукоятки регулируются по высоте;<br>
-инерционная масса махзовика - 29 кг;
+инерционная масса маховика - 29 кг;
 </p>
 </div>
 
