--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -118,7 +118,7 @@
 <div class="block">
 <a href="elipsoidi/Sportop-E7000P.html">
   <img id="pictureInBlock" alt="Эллиптический тренажер Sportop E7000P" src="images/products/sportop-e7000p-1.jpg">
-  <p>Sportop E2000i</p>
+  <p>Sportop E7000P</p>
   <p>Цена за месяц: 90 руб.</p>
   <p>Цена за 2 месяца: 170 руб.</p>
   <p>Цена за 3 месяца: 270 руб.+бесплатная доставка</p></a>
