--- a/About.html
+++ b/About.html
@@ -16,26 +16,13 @@
 
   <meta name="Keywords" content="аренда беговой дорожки, аренда беговой дорожки минск, бег на беговой дорожке, бега на беговой дорожке, бега дорожка, бегова дорожка, беговая дорожка, беговая дорожка в домашних условиях, беговая дорожка для дома, беговая дорожка для дома аренда, беговая дорожка для дома недорого, беговая дорожка для дома прокат, беговая дорожка для дома спортдоставка, беговая дорожка для квартиры, беговая дорожка или эллиптический тренажер, беговая дорожка с доставкой, беговая дорожка housefit, беговая дорожка nordictrack, беговая дорожка sport, беговая дорожка t, беговая дорожка бу, беговая дорожка домой, беговая дорожка минск, беговая дорожка минск цены, беговая дорожка мышцы, беговая дорожка напрокат, беговая дорожка напрокат в минске, беговая дорожка напрокат в минске с доставкой, беговая дорожка недорого, беговая дорожка похудей, беговая дорожка рб, беговая дорожка сайты, беговая дорожка сколько, беговая дорожка спортдоставка, беговая дорожка стоит, беговая дорожка т, беговая дорожка фитнес, беговая дорожка фото, беговой дорожка, беговой тренажер, беговой тренажер для дома, беговы дорожки, беговые дорожки для дома минск, беговые дорожки беларусь, беговые дорожки интернет, беговые дорожки спорт тренажеры, беговые дорожки характеристики, взять в аренду беговую дорожку, взять в аренду беговую дорожку в минске, взять в прокат беговую дорожку, взять напрокат беговую дорожку, где беговая дорожка, домашний спортзал, домашняя беговая дорожка, интернет магазин беговых дорожек, какая беговая дорожка, какая беговая дорожка лучше, компактная беговая дорожка, купить беговой, купить тренажер, лучшие беговые дорожки, лучшие тренажеры беговая дорожка, мини спортзал, прокат беговой дорожки, прокат беговой дорожки в минске, прокат беговых дорожек в минске с доставкой, сделать спортзал, складная беговая дорожка, складные беговые дорожки, сколько стоит беговая дорожка, спорт беговые дорожки, спортзал дома, спортзал спортивный, спортивные беговые дорожки, спортивные тренажеры беговая дорожка, спортивный беговой тренажер, тренажер беговая дорожка, тренажер беговая дорожка для дома, тренажер беговой эллиптический, тренажер дорожка, тренировка на беговой дорожке, фитнес тренажер, хороший спортзал, электрическая беговая дорожка, электрическая беговая дорожка для дома, эллиптическая беговая дорожка, аренда велотренажера, аренда велотренажеров в минске, аренда горизонтальных велотренажеров минск бесплатная доставка, аренда прокат тренажеров, аренда спортивных тренажеров, аренда тренажера эллипс, аренда тренажеров, аренда тренажеров брест, аренда тренажеров минск, аренда тренажеров минск с доставкой, аренда эллипсоидного тренажера, беговая или велотренажер, велотренажер, велотренажер для дома, велотренажер для дома аренда, велотренажер для похудения, велотренажер или беговая дорожка, велотренажер с доставкой, велотренажер магнитный, велотренажер минск, велотренажер напрокат, велотренажер напрокат в минске, велотренажер напрокат в минске с доставкой, велотренажер напрокат в минске с доставкой цена, велотренажер прокат, велотренажер прокат минск, велотренажер спорт, велотренажер спорт доставка, велотренажеры интернет, велотренажеры минск, взять в аренду велотренажер, взять в аренду тренажер, взять в аренду тренажер в минске, взять в аренду тренажер эллипсоид, взять велотренажер напрокат минск, взять напрокат велотренажер, взять тренажер напрокат, дорожка напрокат, заказать тренажер эллипсоид аренда, лучшие велотренажеры, прокат велотренажеров, прокат эллипсоида, прокат эллипсоида минск, спорт эллипсоид, спортдоставка велотренажеры, тренажер аренда, тренажер велотренажер, тренажер дом, тренажер минск, тренажер напрокат, тренажер напрокат минск, тренажер прокат, тренажер прокат минск, тренажер эллипсоид в прокат, тренажер эллипсоид аренда, тренажер эллиптический аренда минск, эллипс тренажер, эллипсный тренажер +в аренду, эллипсоид, эллипсоид минск, эллипсоид напрокат, эллипсоид напрокат минск, эллипсоид тренажер, эллипсоид цена, эллипсоидный тренажер, эллиптический велотренажер, эллиптический тренажер, эллиптический тренажер в аренду, эллиптический тренажер для дома, эллиптический тренажер взять в аренду, эллиптический тренажер минск, эллиптический тренажер спорт, эллиптический тренажер спорт доставка">
 
+<script src="headerGTM.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(61894266, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/61894266" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
-
+<script src="bodyGTM.js"></script>
 <!-- Шапка -->
  <script src="header.js"></script>
 
