--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+<script src="headerGTM.js"></script>
 
 
 <!-- Разметка JSON-LD, созданная Мастером разметки структурированных данных Google. -->
@@ -68,7 +68,7 @@
 </head>
 
 <body>
-
+<script src="bodyGTM.js"></script>
 <!-- Шапка -->
  <script src="header.js"></script>
 
