--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -31,10 +31,11 @@
    });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/61894266" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+<script src="headerGTM.js"></script>
 </head>
 
 <body>
+<script src="bodyGTM.js"></script>
 
 <!-- Шапка -->
  <script src="header.js"></script>
