--- a/skamyi/DFC-SJ1005.html
+++ b/skamyi/DFC-SJ1005.html
@@ -9,7 +9,7 @@
   <title>ПРОКАТ СКАМЕЙ ДЛЯ ЖИМА В МИНСКЕ</title>
   <meta property="og:title" content="ПРОКАТ СКАМЕЙ ДЛЯ ЖИМА В МИНСКЕ">
   <meta property="og:site_name" content="ПРОКАТ СПОРТИВНЫХ ТРЕНАЖЕРОВ В МИНСКЕ">
-  <meta property="og:description" content="Мы занимаемся прокатом спортивных тренажеров в Минске. У нас вы можете взять в аренду беговую дорожку, эллипсоидный тренажер, велотренажер, а так же другие тренажеры. Доставка по Минску. Все тренажеры новые, модели последнего года.">
+  <meta property="og:description" content="Мы занимаемся прокатом спортивных тренажеров в Минске. У нас вы можете взять в аренду беговую дорожку, эллиптический тренажер, велотренажер, а так же другие тренажеры. Доставка по Минску. Все тренажеры новые, модели последнего года.">
   <meta property="og:url" content="http://sportzaldoma.by/">
   <meta property="og:image" content="http://sportzaldoma.by/images/logo.png">
   <meta name="Description" content="Мы занимаемся прокатом спортивных тренажеров в Минске. У нас вы можете взять в аренду беговую дорожку, эллипсоидный тренажер, велотренажер, а так же другие тренажеры. Доставка по Минску. Все тренажеры новые, модели последнего года.">
@@ -32,10 +32,10 @@
  
  
   
-<div class="Line"> <h1>Гипперэкстензия DFC SJ1005</h1> </div>
+<div class="Line"> <h1>Гиперэкстензия DFC SJ1005</h1> </div>
 <div class="content">
 <h2><a href="../skamyi.html" id="Back">⬅Назад</a></h2>
-<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Гипперэкстензия DFC SJ1005" src="../images/products/DFC-SJ1005.jpg">
+<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFC-SJ1005.jpg">
 
 <!-- Карусель -->
 <script src="../Carousel2.js"></script>
@@ -43,10 +43,10 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Гипперэкстензия DFC SJ1005" src="../images/products/DFC-SJ1005.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Гипперэкстензия DFC SJ1005" src="../images/products/DFCSJ1005-2.jpg"" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Гипперэкстензия DFC SJ1005" src="../images/products/DFCSJ1005-3.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Гипперэкстензия DFC SJ1005" src="../images/products/DFCSJ1005-4.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFC-SJ1005.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFCSJ1005-2.jpg"" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFCSJ1005-3.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFCSJ1005-4.jpg" tabindex="0"></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
