--- a/skamyi.html
+++ b/skamyi.html
@@ -31,8 +31,8 @@
 <h2><a href="Products.html" id="Back">⬅Каталог</a></h2>
 <div class="block">
 <a href="skamyi/DFC-SJ1005.html">
-  <img id="pictureInBlock" alt="Гипперэкстензия DFC SJ1005" src="images/products/DFC-SJ1005.jpg">
-  <p>Гипперэкстензия DFC SJ1005</p>
+  <img id="pictureInBlock" alt="Гиперэкстензия DFC SJ1005" src="images/products/DFC-SJ1005.jpg">
+  <p>Гиперэкстензия DFC SJ1005</p>
   <p>Цена за месяц: 15 руб.</p>
   <p>Цена за 2 месяца: 25 руб.</p>
   <p>Цена за 3 месяца: 40 руб.+бесплатная доставка</p></a>
