--- a/skamyi/Leco-starter.html
+++ b/skamyi/Leco-starter.html
@@ -44,10 +44,10 @@
  
  
   
-<div class="Line"> <h1>Гиперэкстензия DFC SJ1005</h1> </div>
+<div class="Line"> <h1>Гиперэкстензия Leco Starter</h1> </div>
 <div class="content">
 <h2><a href="../skamyi.html" id="Back">⬅Назад</a></h2>
-<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFC-SJ1005.jpg">
+<img id="pictureInBlock" style="display: block; margin: 0 auto;" alt="Гиперэкстензия Leco Starter" src="../images/products/Leco-starter-1.jpg">
 
 <!-- Карусель -->
 <script src="../Carousel2.js"></script>
@@ -55,10 +55,9 @@
 <div class="ant-carousel" id="first">
   <div class="ant-carousel-hider">
     <ul class="ant-carousel-list">
-    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFC-SJ1005.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFCSJ1005-2.jpg"" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFCSJ1005-3.jpg" tabindex="0"></li>
-    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия DFC SJ1005" src="../images/products/DFCSJ1005-4.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия Alpin Energy" src="../images/products/Leco-starter-1.jpg" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия Alpin Energy" src="../images/products/Leco-starter-2.jpg"" tabindex="0"></li>
+    <li class="ant-carousel-element"><img id="picture" alt="Гиперэкстензия Alpin Energy" src="../images/products/Leco-starter-3.jpg" tabindex="0"></li>
     </ul>
   </div>
   <div class="ant-carousel-arrow-left"></div>
@@ -94,17 +93,7 @@
 <h2 style="text-align: center;"><u>Описание</u></h2>
 <div style="width: 75%; margin: auto;">
 <p id="Description">
-Гиперэкстензия признана самым эффективным тренажером для укрепления низа спины.<br>
-<b><u>Гиперэкстензия DFC SJ1005 позволит выпонить следующие упражнения:</u></b><br>
-&#160;&#160;&#149;<b>Разгибание спины (мышцы спины);</b><br>
-&#160;&#160;&#149;<b>Подъем тела, боковая посадка (боковые мышцы брюшной полости).</b><br>
-Прочная и устойчивая конструкция из нержавеющей стали.<br>
-Черная матовая порошковая покраска.<br>
-Регулируемая по высоте поддерживающая подушка.<br>
-Для устранения скольжения тренажер оснащен амортизирующими подпятниками, не требующими крепления к полу.<br>
-Мягкие части обтянуты эластичной виниловой кожей, внутреннее наполнение – поролон с закрытыми порами. Такая комбинация материалов предотвращает усадку и истирание.<br>
-Верхний материал обладает устойчивостью к изнашиванию и механическим повреждениям.<br>
-Складная конструкция обеспечивает небольшие размеры в сложенном виде и позволяет прятать тренажер после занятий. Тренажер компактен и вписывается в небольшой зал или квартиру.<br>
+Скамья для пресса LECO Starter подходит для занятий спортом дома и в спортзале. Переставляемая пара валиков делает скамью для мышц спины скамьей для пресса, угол наклона 42 градуса. Максимальный вес пользователя, кг – 100. Торцевые ножки эксценричны для регулировки устойчивости при неровностях пола.
 </p>
 </div>
 
@@ -116,19 +105,15 @@
 </tr>
 <tr>
 <td>Вес пользователя макс.</td>
-<td>110 кг</td>
+<td>100 кг</td>
 </tr>
 <tr>
 <td>Размер в рабочем виде</td>
-<td>102 х 56 х 79 см</td>
-</tr>
-<tr>
-<td>Размер в сложенном виде</td>
-<td>60 х 56 х 123 см</td>
+<td>101 х 33 х 65 см</td>
 </tr>
 <tr>
 <td>Вес</td>
-<td>11,5 кг</td>
+<td>5 кг</td>
 </tr>
 </table>
 
