--- a/delivery.html
+++ b/delivery.html
@@ -51,12 +51,12 @@
 <td>Без лифта или если груз не помещается в лифт: 4 рубля за этаж (привоз+ возврат)</td>
 </tr>
 <tr>
-<td>С лифтом: 5 рублей (привоз+возврат)</td>
+<td>С лифтом: Бесплатно (привоз+возврат)</td>
 </tr>
 <tr>
 </table>
 <p style="text-align: center;">
-При досрочном возврате предмета проката оплачивается забор от арендатора в размере суммы доставки произведенной к арендатору.<br><br>
+<br>
 Также вы можете забрать спортивный инвентарь самостоятельно, по адресу: г.Минск, пр-т Независимости д. 177 по предварительному согласованию с менеджерами проката.
 </p> 
 
