--- a/elipsoidi/Marcy-NS40501E.html
+++ b/elipsoidi/Marcy-NS40501E.html
@@ -32,7 +32,7 @@
  
  
   
-<div class="Line"> <h1>Эллиптический тренажер Marcy-NS40501E</h1> </div>
+<div class="Line"> <h1>Эллиптический тренажер Marcy NS40501E</h1> </div>
 <div class="content">
 
 <h2><a href="../elipsoidi.html" id="Back">⬅Назад</a></h2>
