--- a/velotrenajeri.html
+++ b/velotrenajeri.html
@@ -63,7 +63,7 @@
 <div class="block">
 <a href="velotrenajeri/Alpin-Picco-B-180.html">
   <img id="pictureInBlock" alt="Велотренажер Alpin Picco B-180" src="images/products/Alpin-Picco-B-180-1.jpg">
-  <p>Konlega K8738</p>
+  <p>Alpin Picco B-180</p>
   <p>Цена за месяц: 45 руб.</p>
   <p>Цена за 2 месяца: 80 руб.</p>
   <p>Цена за 3 месяца: 135 руб.+бесплатная доставка</p></a>
