--- a/elipsoidi.html
+++ b/elipsoidi.html
@@ -31,11 +31,10 @@
    });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/61894266" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<script src="headerGTM.js"></script>
+<!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
-<script src="bodyGTM.js"></script>
 
 <!-- Шапка -->
  <script src="header.js"></script>
@@ -75,6 +74,15 @@
 <a href="elipsoidi/ProForm225.html">
   <img id="pictureInBlock" alt="Эллиптический тренажер ProForm 225" src="images/products/ProForm225.jpg">
   <p>ProForm 225</p>
+  <p>Цена за месяц: 65 руб.</p>
+  <p>Цена за 2 месяца: 120 руб.</p>
+  <p>Цена за 3 месяца: 195 руб.+бесплатная доставка</p></a>
+</div>
+
+<div class="block">
+<a href="elipsoidi/Sportop-E820P.html">
+  <img id="pictureInBlock" alt="Эллиптический тренажер Sportop E820P" src="images/products/Sportop-E820P-1.jpg">
+  <p>Sportop E820P</p>
   <p>Цена за месяц: 65 руб.</p>
   <p>Цена за 2 месяца: 120 руб.</p>
   <p>Цена за 3 месяца: 195 руб.+бесплатная доставка</p></a>
